Agregue mi archivo de texto y matricula , y cambie una palabra para que la pagina sea mas amigable

--- a/Ciberseguridad/blog.html
+++ b/Ciberseguridad/blog.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="courses.html">Cursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactus.html">Contáctanos</a>
+                        <a class="nav-link" href="contactus.html">Conocenos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="join.html">Unirse</a>
